[package]
name = "zdu_ui"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.14.0", features = ["advanced"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "net", "io-util", "sync"] }
zdu_lib = { path = "../zdu_lib" }
dirs = "5.0.1"
rfd = "0.15.0"
rand = "0.9.0"
